--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -59,10 +59,10 @@ jobs:
           # Waka
           plugin_wakatime: yes
           # plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
-          plugin_wakatime_url: https://wakatime.com
+          plugin_wakatime_url: https://wakatime.com/api/v1/users/bartoligerman497/stats/last_7_days
           plugin_wakatime_user: bartoligerman497
           plugin_wakatime_days: 7
           plugin_wakatime_languages_other: yes
           plugin_wakatime_limit: 5
-          plugin_wakatime_repositories_visibility: all
+          plugin_wakatime_repositories_visibility: public
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
