--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -64,5 +64,5 @@ jobs:
           # plugin_wakatime_days: 7
           # plugin_wakatime_languages_other: yes
           # plugin_wakatime_limit: 5
-          # plugin_wakatime_repositories_visibility: public
+          # plugin_wakatime_repositories_visibility: all
           # plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
