--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -58,7 +58,7 @@ jobs:
 
           # Waka
           plugin_wakatime: yes
-          # plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+          plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: bartoligerman497
           # plugin_wakatime_days: 7
