--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,7 +2,7 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{ cron: "0 0 * * *" }]
+  schedule: [{ cron: "0 */6 * * *" }]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: { branches: ["master", "main"] }
@@ -61,8 +61,8 @@ jobs:
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: bartoligerman497
-          # plugin_wakatime_days: 7
-          # plugin_wakatime_languages_other: yes
-          # plugin_wakatime_limit: 5
-          # plugin_wakatime_repositories_visibility: all
-          # plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
+          plugin_wakatime_days: 365
+          plugin_wakatime_languages_other: yes
+          plugin_wakatime_limit: 10
+          plugin_wakatime_repositories_visibility: all
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, os
