--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -61,3 +61,4 @@ jobs:
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
           plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_user: bartoligerman497
+          plugin_wakatime_days: 365
