--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -58,10 +58,19 @@ jobs:
 
           # Waka
           plugin_wakatime: yes
-          plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_user: bartoligerman497
           plugin_wakatime_days: 365
+          plugin_wakatime_limit: 5
+          plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, editors-graphs, os, os-graphs
+          plugin_wakatime_url: https://wakatime.com
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+          plugin_wakatime_languages_other: yes
+          plugin_wakatime_languages_ignored: Other
+          
+          # plugin_wakatime: yes
+          # plugin_wakatime_url: https://wakatime.com
+          # plugin_wakatime_user: bartoligerman497
+          # plugin_wakatime_days: 365
+          # plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
 
           # plugin_wakatime_languages_other: yes
           # plugin_wakatime_limit: 5
