--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -59,6 +59,7 @@ jobs:
           # Waka
           plugin_wakatime: yes
           plugin_wakatime_days: '365'
+          plugin_wakatime_range: '365'
           plugin_wakatime_limit: 5
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, editors-graphs, os, os-graphs
           plugin_wakatime_url: https://wakatime.com
