--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,15 +2,17 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{ cron: "0 */6 * * *" }]
+  schedule:
+      - cron: "0 * * * *"
+  # schedule: [{ cron: "0 */6 * * *" }]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    # permissions:
+      # contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -31,7 +33,7 @@ jobs:
           user: bartoligerman497
           config_timezone: America/Buenos_Aires
           template: classic
-          committer_message: "chore: update metrics"
+          # committer_message: "chore: update metrics"
 
           # Stats
           # base: ""
@@ -58,17 +60,18 @@ jobs:
 
           # Waka
           plugin_wakatime: yes
-          plugin_wakatime_days: '365'
+          plugin_wakatime_user: bartoligerman497
+          plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, editors-graphs, os, os-graphs
           plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
           plugin_wakatime_languages_other: yes
           plugin_wakatime_languages_ignored: Other
-          
+          plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
+
           # plugin_wakatime: yes
           # plugin_wakatime_url: https://wakatime.com
-          plugin_wakatime_user: bartoligerman497
+          # plugin_wakatime_user: bartoligerman497
           # plugin_wakatime_days: 365
           # plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
 
