--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,7 +3,8 @@ name: Metrics
 on:
   # Schedule updates (each hour)
   schedule:
-      - cron: "0 * * * *"
+      #- cron: "0 * * * *"
+      - cron: "*/5 * * * *"
   # schedule: [{ cron: "0 */6 * * *" }]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
