--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -46,16 +46,16 @@ jobs:
           plugin_languages_indepth: yes
           # commits_authoring: German Bartoli, bartoligerman497, bartoligerman497@users.noreply.github.com
           plugin_languages_details: bytes-size, percentage, lines
-          plugin_languages_analysis_timeout: 15
+          # plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming, prose, data
           plugin_languages_colors: github
           plugin_languages_ignored: Rich Text Format, JSON, XML, TEXT, INI, Ant Build System, Microsoft Visual Studio Solution, JAR Manifest, SVG
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
+          # plugin_languages_recent_days: 14
+          # plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%d
+          # plugin_languages_threshold: 0%d
 
           # Waka
           plugin_wakatime: yes
