--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -49,7 +49,7 @@ jobs:
           plugin_languages_sections: most-used, recently-used
           plugin_languages_indepth: yes
           plugin_languages_limit: 8
-          plugin_languages_analysis_timeout: 30
+          # plugin_languages_analysis_timeout: 30
           # plugin_languages_categories: markup, programming, prose, data
           plugin_languages_colors: github
           # plugin_languages_recent_categories: markup, programming
