--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,7 +3,7 @@ name: Metrics
 on:
   # Schedule updates (each hour)
   schedule:
-    - cron: "0 0 * * MON"
+    - cron: "0 0 * * *"
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: { branches: ["master", "main"] }
@@ -43,7 +43,7 @@ jobs:
           
           # Languages
           # commits_authoring: German Bartoli, bartoligerman497, bartoligerman497@users.noreply.github.com
-          plugin_languages: yes
+          plugin_languages: no
           plugin_languages_ignored: Rich Text Format, JSON, XML, TEXT, INI, Ant Build System, Microsoft Visual Studio Solution, JAR Manifest, SVG
           plugin_languages_details: lines, bytes-size, percentage
           plugin_languages_sections: most-used, recently-used
