--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -46,7 +46,8 @@ jobs:
           plugin_languages: yes
           plugin_languages_ignored: Rich Text Format, JSON, XML, TEXT, INI, Ant Build System, Microsoft Visual Studio Solution, JAR Manifest, SVG
           plugin_languages_details: lines, bytes-size, percentage
-          plugin_languages_sections: most-used, recently-used
+          plugin_languages_sections: most-used
+          #, recently-used
           plugin_languages_indepth: yes
           plugin_languages_limit: 8
           plugin_languages_analysis_timeout: 30
