--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -3,7 +3,8 @@ name: Metrics
 on:
   # Schedule updates (each hour)
   schedule:
-    - cron: "0 0 * * *"
+    #- cron: "0 0 * * *" # cada hora
+    - cron: 0 */6 * * * # cada 6 horas    
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: { branches: ["master", "main"] }
