--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -70,6 +70,18 @@ jobs:
           plugin_wakatime_languages_ignored: Other
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
 
+          name: Recently played games
+          uses: lowlighter/metrics@latest
+          with:
+            filename: metrics.plugin.steam.svg
+            token: NOT_NEEDED
+            base: ""
+            plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
+            plugin_steam: yes
+            plugin_steam_user: "0"
+            plugin_steam_sections: recently-played
+            plugin_steam_achievements_limit: 0
+
           # plugin_wakatime: yes
           # plugin_wakatime_url: https://wakatime.com
           # plugin_wakatime_user: bartoligerman497
