--- a/.github/workflows/steam.yml
+++ b/.github/workflows/steam.yml
@@ -20,6 +20,6 @@ jobs:
             base: ""
             plugin_steam_token: ${{ secrets.STEAM_TOKEN }}
             plugin_steam: yes
-            plugin_steam_user: "0"
+            plugin_steam_user: ${{ secrets.STEAM_TOKEN }}
             plugin_steam_sections: recently-played
             plugin_steam_achievements_limit: 0
