--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,7 +14,8 @@ jobs:
     # permissions:
       # contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Profile
+        uses: lowlighter/metrics@latest
         with:
           # Your GitHub token
           # The following scopes are required:
