--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -72,6 +72,16 @@ jobs:
           plugin_wakatime_languages_ignored: Other
           plugin_wakatime_token: ${{ secrets.WAKATIME_API_KEY }}
 
+      - name: Youtube Music - Recently listed
+        uses: lowlighter/metrics@latest
+        with:
+          token: NOT_NEEDED
+          base: ""
+          plugin_music_token: ${{ secrets.YOUTUBE_MUSIC_TOKENS }}
+          plugin_music: yes
+          plugin_music_mode: recent
+          plugin_music_provider: youtube
+          
       - name: Steam
         uses: lowlighter/metrics@latest
         with:
