--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,7 +31,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           
           # Options
-          user: GermanBartoli
+          user: bartoligerman497
           config_timezone: America/Buenos_Aires
           template: classic
           # committer_message: "chore: update metrics"
@@ -63,7 +63,7 @@ jobs:
 
           # Waka
           plugin_wakatime: yes
-          plugin_wakatime_user: bartoligerman497
+          plugin_wakatime_user: GermanBartoli
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
           plugin_wakatime_sections: time, projects, projects-graphs, languages, languages-graphs, editors, editors-graphs, os, os-graphs
