--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,7 +31,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           
           # Options
-          user: bartoligerman497
+          user: germanbartoli
           config_timezone: America/Buenos_Aires
           template: classic
           # committer_message: "chore: update metrics"
