--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -44,14 +44,14 @@ jobs:
           config_octicon: yes
           config_twemoji: yes
           
-          # Languages
-          # commits_authoring: German Bartoli, bartoligerman497, bartoligerman497@users.noreply.github.com
+          # Languages          
           plugin_languages: yes
           plugin_languages_ignored: Rich Text Format, JSON, XML, TEXT, INI, Ant Build System, Microsoft Visual Studio Solution, JAR Manifest, SVG
           plugin_languages_details: lines, bytes-size, percentage
           plugin_languages_sections: most-used
           #, recently-used
           plugin_languages_indepth: yes
+          commits_authoring: German Bartoli, germanbartoli, germanbartoli@users.noreply.github.com
           plugin_languages_limit: 8
           plugin_languages_analysis_timeout: 30
           plugin_languages_categories: markup, programming, prose, data
